--- a/listui/Cargo.toml
+++ b/listui/Cargo.toml
@@ -7,9 +7,11 @@ license = "GPL-3.0"
 authors = ["gulis1"]
 repository = "https://github.com/gulis1/lisTUI"
 readme = "README.md"
+categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
+keywords = ["music", "playlist", "music_player", "terminal", "youtube"]
 
 [dependencies]
-listui_lib = { path = "../listui_lib" }
+listui_lib = { path = "../listui_lib", version="0.1.0" }
 tui = "0.19"
 crossterm = "0.26.1"
 dotenvy = "0.15"
