--- a/listui/Cargo.toml
+++ b/listui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "listui"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 description = "A simple music player for the terminal, written in Rust. "
 license = "GPL-3.0"
@@ -11,14 +11,15 @@ categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
 keywords = ["music", "playlist", "music_player", "terminal", "youtube"]
 
 [dependencies]
-listui_lib = { path = "../listui_lib", version="0.1.2" }
+listui_lib = { path = "../listui_lib", version="0.2.0" }
 tui = "0.19"
 crossterm = "0.26.1"
 dotenvy = "0.15"
 once_cell = "1.17.1"
-tokio = "1.26.0"
+tokio = {version = "1.26.0", features = ["fs"]}
 rand = "0.8.5"
 dirs = "4.0.0"
 argh = "0.1.10"
+soloud = "1.0.2"
 regex = "1"
 lazy_static = "1.4.0"
