--- a/listui/Cargo.toml
+++ b/listui/Cargo.toml
@@ -12,11 +12,11 @@ keywords = ["music", "playlist", "music_player", "terminal", "youtube"]
 
 [dependencies]
 listui_lib = { path = "../listui_lib", version="0.2.0" }
-tui = "0.19"
+ratatui = "0.20.1"
 crossterm = "0.26.1"
 dotenvy = "0.15"
 once_cell = "1.17.1"
-tokio = {version = "1.26.0", features = ["fs"]}
+tokio = {version = "1.26.0", features = ["rt", "fs", "rt-multi-thread"]}
 rand = "0.8.5"
 dirs = "4.0.0"
 argh = "0.1.10"
