--- a/listui/Cargo.toml
+++ b/listui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "listui"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "A simple music player for the terminal, written in Rust. "
 license = "GPL-3.0"
@@ -12,14 +12,15 @@ keywords = ["music", "playlist", "music_player", "terminal", "youtube"]
 
 [dependencies]
 listui_lib = { path = "../listui_lib", version="0.2.0" }
-ratatui = "0.23.0"
+ratatui = "0.26.1"
 crossterm = "0.27.0"
 dotenvy = "0.15"
 once_cell = "1.17.1"
-tokio = {version = "1.26.0", features = ["rt", "fs", "rt-multi-thread"]}
+tokio = {version = "1.26.0", features = ["full"]}
 rand = "0.8.5"
 dirs = "5.0.1"
 argh = "0.1.10"
 soloud = "1.0.2"
 regex = "1"
 lazy_static = "1.4.0"
+simplelog = "0.12.2"
