--- a/listui_lib/Cargo.toml
+++ b/listui_lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "listui_lib"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 description = "Library with various utilities used by the lisTUI music player."
 license = "GPL-3.0"
@@ -18,3 +18,4 @@ soloud = "1.0.2"
 tokio = {version = "1.26.0", features = ["process"]}
 diesel_migrations = "2.0.0"
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
+log = "0.4.21"
