--- a/listui_lib/Cargo.toml
+++ b/listui_lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "listui_lib"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 description = "Library with various utilities used by the lisTUI music player."
 license = "GPL-3.0"
@@ -14,8 +14,9 @@ diesel = { version = "2.0.3", features = ["sqlite"] }
 serde = {version = "1.0.152", features = ["derive"]}
 serde_json = "1.0.93"
 reqwest = {version = "0.11.14"}
-soloud = "1.0.2"
 tokio = {version = "1.26.0", features = ["process"]}
 diesel_migrations = "2.0.0"
 libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
 log = "0.4.21"
+rodio = "0.20.1"
+thiserror = "2.0.3"
