--- a/listui/Cargo.toml
+++ b/listui/Cargo.toml
@@ -12,13 +12,13 @@ keywords = ["music", "playlist", "music_player", "terminal", "youtube"]
 
 [dependencies]
 listui_lib = { path = "../listui_lib", version="0.3.0" }
-ratatui = "0.26.1"
-crossterm = "0.27.0"
+ratatui = "0.29.0"
+crossterm = "0.28.1"
 dotenvy = "0.15"
 once_cell = "1.17.1"
 tokio = {version = "1.26.0", features = ["full"]}
-rand = "0.8.5"
-dirs = "5.0.1"
+rand = "0.9.0"
+dirs = "6.0.0"
 argh = "0.1.10"
 soloud = "1.0.2"
 regex = "1"
@@ -26,3 +26,6 @@ lazy_static = "1.4.0"
 simplelog = "0.12.2"
 anyhow = "1.0.93"
 log = "0.4.21"
+mime_guess = "2.0.5"
+mime = "0.3.17"
+ogg_metadata = "0.4.1"
