--- a/listui_lib/Cargo.toml
+++ b/listui_lib/Cargo.toml
@@ -13,10 +13,12 @@ readme = "README.md"
 diesel = { version = "2.0.3", features = ["sqlite"] }
 serde = {version = "1.0.152", features = ["derive"]}
 serde_json = "1.0.93"
-reqwest = {version = "0.11.14"}
+reqwest = {version = "0.12.12"}
 tokio = {version = "1.26.0", features = ["process"]}
 diesel_migrations = "2.0.0"
-libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
+libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
 log = "0.4.21"
-rodio = "0.20.1"
+rodio = { version = "0.20.1", features = ["symphonia-all"], default-features = false }
 thiserror = "2.0.3"
+symphonia = "0.5.4"
+ogg_metadata = "0.4.1"
